test/classes/delete-free/lifetimes/l8.good
l8.chpl:13: In function 'badReturnRefIdentityArg':
l8.chpl:14: error: Reference to scoped variable cannot be returned
l8.chpl:13: note: consider scope of arg
